// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicPage with content 1`] = `
<div
  class="DynamicPage-dynamicPage-0 sapScrollBar"
>
  <div
    class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 DynamicPageTitle-container-0"
    data-component-name="DynamicPageTitle"
  >
    <div
      class="DynamicPageTitle-breadcrumbs-0"
    >
      <div>
        <ui5-link
          design="Default"
        >
          Home
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 1
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 2
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 3
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 4
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 5
        </ui5-link>
      </div>
    </div>
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      style="flex-grow: 1; width: 100%;"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 DynamicPageTitle-titleMainSection-0"
      >
        <div
          class="DynamicPageTitle-title-0"
        >
          <ui5-title
            level="H2"
          >
            Header Title
          </ui5-title>
        </div>
        <div
          class="DynamicPageTitle-content-0"
        >
          <div
            class="Toolbar-outerContainer-0 Toolbar-clear-0"
          >
            <div
              class="Toolbar-toolbar-0"
            >
              <div>
                <ui5-badge
                  color-scheme="1"
                >
                  Status: OK
                </ui5-badge>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Toolbar-outerContainer-0 Toolbar-clear-0"
      >
        <div
          class="Toolbar-toolbar-0"
        >
          <span
            class="spacer"
            style="flex-grow: 1;"
          />
          <div>
            <ui5-button
              design="Emphasized"
            >
              Edit
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
            >
              Delete
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
            >
              Copy
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
            >
              Toggle Footer
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="action"
            />
          </div>
          <div>
            <div
              class="ToolbarSeparator-separator-0"
            />
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="full-screen"
            />
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="exit-full-screen"
            />
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="decline"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
    >
      <div
        class="DynamicPageTitle-subTitle-0"
      >
        <ui5-label>
          This is a subheading
        </ui5-label>
      </div>
    </div>
  </div>
  <div
    class="DynamicPage-header-0"
    data-component-name="DynamicPageHeader"
  >
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStart-0 FlexBox-flexWrapNoWrap-0 DynamicPage-contentHeader-0"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label>
          Location: Warehouse A
        </ui5-label>
        <ui5-label>
          Halway: 23L
        </ui5-label>
        <ui5-label>
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label>
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus-0"
        >
          <span
            class="ObjectStatus-textSuccess-0"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 DynamicPage-anchorBar-0"
  >
    <section
      class="DynamicPageAnchorBar-anchorBarActionButton-0"
      role="navigation"
      style="top: 0.025rem;"
    >
      <ui5-button
        class="DynamicPageAnchorBar-anchorBarActionButton-0 DynamicPageAnchorBar-anchorBarActionButtonExpandable-0"
        data-ui5wcr-object-page-header-action=""
        design="Default"
        icon="slim-arrow-down"
      />
    </section>
  </div>
  <div
    class="DynamicPageContentArea-container-0"
    data-component-name="DynamicPageContentArea"
    title="Base data"
  >
    <div
      class="DynamicPageContentArea-content-0"
    >
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem; z-index: 0;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Phone Numbers
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        />
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-5555
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Social Accounts
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 4;"
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Addresses
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            PO Box 32114
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Mailing Address
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Phone Numbers
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        />
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-5555
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Social Accounts
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 4;"
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Addresses
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            PO Box 32114
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Mailing Address
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem; z-index: 0;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Phone Numbers
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        />
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-5555
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Social Accounts
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 4;"
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Addresses
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            PO Box 32114
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Mailing Address
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Phone Numbers
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        />
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            +1 234-567-5555
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Social Accounts
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 4;"
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form-0"
        data-columns="4"
        style="--ui5wcr_form_content_span: 8; --ui5wcr_form_label_span: 4; padding-bottom: 2rem;"
      >
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2;"
        >
          Addresses
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 3;"
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 1; grid-row-start: 4;"
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 5; grid-row-start: 4;"
        >
          <span
            class="Text-text-0"
          >
            PO Box 32114
          </span>
        </div>
        <ui5-title
          level="H5"
          style="padding-bottom: 0.75rem; grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2;"
        >
          Mailing Address
        </ui5-title>
        <ui5-label
          class="FormItem-label-0"
          style="grid-column-start: 13; grid-row-start: 3;"
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content-0"
          style="grid-column-start: 17; grid-row-start: 3;"
        >
          <span
            class="Text-text-0"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DynamicPage without content 1`] = `
<div
  class="DynamicPage-dynamicPage-0 sapScrollBar"
>
  <div
    class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 DynamicPageTitle-container-0"
    data-component-name="DynamicPageTitle"
  >
    <div
      class="DynamicPageTitle-breadcrumbs-0"
    >
      <div>
        <ui5-link
          design="Default"
        >
          Home
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 1
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 2
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 3
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 4
        </ui5-link>
        <ui5-label
          style="margin: 0px 0.25rem;"
        >
          /
        </ui5-label>
        <ui5-link
          design="Default"
        >
          Page 5
        </ui5-link>
      </div>
    </div>
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      style="flex-grow: 1; width: 100%;"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 DynamicPageTitle-titleMainSection-0"
      >
        <div
          class="DynamicPageTitle-title-0"
        >
          <ui5-title
            level="H2"
          >
            Header Title
          </ui5-title>
        </div>
        <div
          class="DynamicPageTitle-content-0"
        >
          <div
            class="Toolbar-outerContainer-0 Toolbar-clear-0"
          >
            <div
              class="Toolbar-toolbar-0"
            >
              <div>
                <ui5-badge
                  color-scheme="1"
                >
                  Status: OK
                </ui5-badge>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Toolbar-outerContainer-0 Toolbar-clear-0"
      >
        <div
          class="Toolbar-toolbar-0"
        >
          <span
            class="spacer"
            style="flex-grow: 1;"
          />
          <div>
            <ui5-button
              design="Emphasized"
            >
              Edit
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
            >
              Delete
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
            >
              Copy
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
            >
              Toggle Footer
            </ui5-button>
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="action"
            />
          </div>
          <div>
            <div
              class="ToolbarSeparator-separator-0"
            />
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="full-screen"
            />
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="exit-full-screen"
            />
          </div>
          <div>
            <ui5-button
              design="Transparent"
              icon="decline"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
    >
      <div
        class="DynamicPageTitle-subTitle-0"
      >
        <ui5-label>
          This is a subheading
        </ui5-label>
      </div>
    </div>
  </div>
  <div
    class="DynamicPage-header-0"
    data-component-name="DynamicPageHeader"
  >
    <div
      class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStart-0 FlexBox-flexWrapNoWrap-0 DynamicPage-contentHeader-0"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label>
          Location: Warehouse A
        </ui5-label>
        <ui5-label>
          Halway: 23L
        </ui5-label>
        <ui5-label>
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label>
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus-0"
        >
          <span
            class="ObjectStatus-textSuccess-0"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0 DynamicPage-anchorBar-0"
  >
    <section
      class="DynamicPageAnchorBar-anchorBarActionButton-0"
      role="navigation"
      style="top: 0.025rem;"
    >
      <ui5-button
        class="DynamicPageAnchorBar-anchorBarActionButton-0 DynamicPageAnchorBar-anchorBarActionButtonExpandable-0"
        data-ui5wcr-object-page-header-action=""
        design="Default"
        icon="slim-arrow-down"
      />
    </section>
  </div>
</div>
`;
